Fixed #18 Support fullscreen on iphone6s

--- a/styles/scss/components/fullscreen.scss
+++ b/styles/scss/components/fullscreen.scss
@@ -3,3 +3,11 @@
   @include flex(none);
 }
 
+.video-react.video-react-fullscreen {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 9999;
+}
